# steadyflow

./: AUTHORS  CMakeLists.txt  NEWS  README  install.cmake
Steadyflow/: AddFileDialog.vala  AppService.vala  Application.vala  Application.vala~  FileListController.vala  IAppService.vala  IndicatorController.vala  IndicatorController.vala~  MainWindow.vala  NotificationController.vala  PreferencesDialog.vala  Services.vala
Steadyflow.Core/: DownloadService.vala  GioDownloadFile.vala  GioSettingsService.vala  IDownloadFile.vala  IDownloadService.vala  ISettingsService.vala  OptionParser.vala  Util.vala
Steadyflow.UI/: AyatanaIndicatorService.vala  DownloadCellRenderer.vala  GtkBuilderDialog.vala  GtkBuilderWindow.vala  IGtkBuilderContainer.vala  IIndicatorService.vala  TrayIndicatorService.vala  UIUtil.vala
cmake/: FindGTK3.cmake  GSettings.cmake  Po.cmake  config.h.in
data/: net.launchpad.steadyflow.gschema.xml  steadyflow.1  steadyflow.desktop.in
data/ui/: AddFileDialog.ui  MainWindow.ui  PreferencesDialog.ui
po/: ar.po  ast.po  be.po  bg.po  bn.po  bs.po  ca.po  cs.po  da.po  de.po  de.po~  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  lt.po  ml.po  ms.po  my.po  nb.po  nl.po  (+18 more)
vapi/: AppConfig.vapi
